Explorado propriedades css

--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-02-primeiros-passos-em-css/trybe-marketing.html
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-02-primeiros-passos-em-css/trybe-marketing.html
@@ -4,16 +4,31 @@
     <meta charset="UTF-8">
     <title>HTML</title>
     <style>
+        * {
+            font-size: 16px;
+        }
+        
         h1 {
             font-size: 65px;
             color: orange;
+            font-family: sans-serif;
         }
+
         ul {
             background-color: aquamarine;
+            font-style: italic;
+            line-height: 3;
         }
 
         .background-color {
             background-color: bisque;
+        }
+
+        p {
+            font-weight: 600;
+            text-align: justify;
+            text-decoration: line-through;
+
         }
 
     </style>
