--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-03-seletores-e-posicionamentos/exercicio-seletores/index.html
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-03-seletores-e-posicionamentos/exercicio-seletores/index.html
@@ -8,6 +8,16 @@
   <body>
     <h1>Lista dos Melhores Sites que já vi</h1>
     <p>Top 3 dos melhores sites que existem na web</p>
+    <ol>
+        <li>Google</li>
+        <li>Youtube</li>
+        <li>Linkedin</li>
+    </ol>
     <p>Principais motivos para eu gostar deles</p>
+    <ul>
+        <li>Pesquisa</li>
+        <li>Videos</li>
+        <li>Networking</li>
+    </ul>
   </body>
 </html>
