--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-03-seletores-e-posicionamentos/exercicio-classes-descendentes/index.html
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-03-seletores-e-posicionamentos/exercicio-classes-descendentes/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1><em>Combinações e Classes Descendentes</em></h1>
     <br />
-    <h3><em>5 frases memoráveis:</em></h3>
+    <h3>Top 5 frases memoráveis:</h3>
     <ol>
       <li><em>Com grandes poderes vêm grandes responsabilidades.</em> - Tio Ben (Homem Aranha)</li>
       <li><em>Houston, temos um problema.</em> - Jack Swigert</li>
@@ -17,29 +17,29 @@
       <li><em>Às vezes, o melhor que podemos fazer é começar novamente.</em> - Steve Rogers (Capitão América)</li>
     </ol>
     <h3>As maiores linguagens de programação:</h3>
-    <ul>
+    <ul id="programing-languages">
       <li>Python</li>
-      <li>Java</li>
-      <li>JavaScript</li>
+      <li class="java">Java</li>
+      <li class="java">JavaScript</li>
       <li>C#</li>
       <li>C / C++</li>
     </ul>
     <h3>Maiores aliados de uma pessoa desenvolvedora:</h3>
-    <ul>
+    <ul id="biggest-allies">
       <li>
-        <a href="https://pt.stackoverflow.com/" target="_blank">StackOverflow</a>
+        <a id="stackoverflow" href="https://pt.stackoverflow.com/" target="_blank">StackOverflow</a>
       </li>
       <li>
-        <a href="https://www.w3schools.com/" target="_blank">W3Schools</a>
+        <a id="w3schools" href="https://www.w3schools.com/" target="_blank">W3Schools</a>
       </li>
       <li>
-        <a href="https://developer.mozilla.org/pt-BR/" target="_blank">MDN Web Docs</a>
+        <a id="mdn" href="https://developer.mozilla.org/pt-BR/" target="_blank">MDN Web Docs</a>
       </li>
       <li>
         <a href="https://devdocs.io/" target="_blank">DevDocs</a>
       </li>
       <li>
-        <a href="https://app.betrybe.com/" target="_blank">Trybe</a>
+        <a id="trybe" href="https://app.betrybe.com/" target="_blank">Trybe</a>
       </li>
     </ul>
   </body>
