--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-03-seletores-e-posicionamentos/exercicio-classes-descendentes/index.html
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-03-seletores-e-posicionamentos/exercicio-classes-descendentes/index.html
@@ -36,7 +36,7 @@
         <a id="mdn" href="https://developer.mozilla.org/pt-BR/" target="_blank">MDN Web Docs</a>
       </li>
       <li>
-        <a href="https://devdocs.io/" target="_blank">DevDocs</a>
+        <a id="dev-docs" href="https://devdocs.io/" target="_blank">DevDocs</a>
       </li>
       <li>
         <a id="trybe" href="https://app.betrybe.com/" target="_blank">Trybe</a>
