Adicionando seções e fotos

--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-04-html-semantico/introducao-a-html-e-css/index.html
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-04-html-semantico/introducao-a-html-e-css/index.html
@@ -33,17 +33,68 @@
 
         <section>
           <h3>Descrição</h3>
-          <p>Os estomatópodes são predadores ativos que caçam presas com o auxílio de um sentido de visão muito apurado e capaz de interpretar polarização no espectro ultravioleta e infravermelho). Apresentam uma grande variação de tamanho, que pode ir de poucos milímetros até aproximadamente 40 cm nas espécies maiores. Eles vivem em fundo consolidado, lodoso ou ainda arenoso, onde cavam seus buracos ou aproveitam-se dos orifícios deixados por outros animais para neles se instalar. São animais exclusivamente carnívoros, alimentando-se de camarões, caranguejos, moluscos, peixes e até mesmo outros da mesma ordem. O segundo par de patas, muito desenvolvido, é usado tanto para atacar a presa como para se defender. O urópodo, quando aberto, também funciona para defesa, como um escudo, fechando a galeria em que o animal esteja instalado. A fêmea desova no local onde se abriga e, em caso de perigo, enrola os ovos como uma bola, prendendo-os junto ao corpo até encontrar um abrigo mais protegido.</p>
+          <img src="../images/image2.jpeg" alt="Foto Stomatopoda">
+          <p>Os estomatópodes são predadores ativos que caçam presas com o auxílio de um sentido 
+            de visão muito apurado e capaz de interpretar polarização no espectro ultravioleta e 
+            infravermelho. Apresentam uma grande variação de tamanho, que pode ir de poucos 
+            milímetros até aproximadamente 40 cm nas espécies maiores. Eles vivem em fundo 
+            consolidado, lodoso ou ainda arenoso, onde cavam seus buracos ou aproveitam-se dos 
+            orifícios deixados por outros animais para neles se instalar. São animais exclusivamente 
+            <strong>carnívoros</strong>, alimentando-se de camarões, caranguejos, moluscos, peixes e até mesmo outros 
+            da mesma ordem. O segundo par de patas, muito desenvolvido, é usado tanto para atacar a 
+            presa como para se defender. O urópodo, quando aberto, também funciona para defesa, como 
+            um escudo, fechando a galeria em que o animal esteja instalado. A fêmea desova no local 
+            onde se abriga e, em caso de perigo, enrola os ovos como uma bola, prendendo-os junto ao 
+            corpo até encontrar um abrigo mais protegido.
+          </p>
         </section>
 
         <section>
           <h3>Comportamentos sociais</h3>
-          <p>São animais que apresentam comportamentos sociais muito variados, desde ameaças visuais contra predadores até comportamentos de côrte. De acordo com a anatomia da sua pata raptorial é possível distinguir entre dois grupos funcionais, as perfuradoras (spearers) ou as esmagadoras (smashers), sendo que cada um dos tipos apresenta sua própria variação comportamental e até mesmo de habitat. As maiores esmagadoras, tais como exemplares de Odontodactylus scyllarus, são capazes de desferir um dos mais rápidos e violentos golpes do reino animal, um soco que pode apresentar a velocidade de um tiro calibre .22 (equivalente a 720 km/h) e uma pressão de impacto de 600 N/cm².[3] Essa força esmagadora é a responsável pelo seu título de "lagosta-boxeadora" e é capaz de facilmente quebrar a carapaça de um caranguejo, as conchas duras e calcificadas de gastrópodes ou até mesmo quebrar o vidro reforçado de um aquário.</p>
+          <img src="../images/image4.jpg" alt="Foto Stomatopoda">
+          <p>São animais que apresentam comportamentos sociais muito variados, desde ameaças 
+            visuais contra predadores até comportamentos de côrte. De acordo com a anatomia 
+            da sua pata raptorial é possível distinguir entre dois grupos funcionais, as 
+            perfuradoras (spearers) ou as esmagadoras (smashers), sendo que cada um dos tipos 
+            apresenta sua própria variação comportamental e até mesmo de habitat. As maiores 
+            esmagadoras, tais como exemplares de Odontodactylus scyllarus, são capazes de desferir 
+            um dos mais rápidos e violentos golpes do reino animal, um soco que pode apresentar a 
+            velocidade de um tiro calibre .22 (equivalente a <strong>720 km/h</strong>) e uma pressão de impacto de 
+            600 N/cm². Essa força esmagadora é a responsável pelo seu título de "lagosta-boxeadora" 
+            e é capaz de facilmente quebrar a carapaça de um caranguejo, as conchas duras e 
+            calcificadas de gastrópodes ou até mesmo quebrar o vidro reforçado de um aquário.
+          </p>
         </section>
 
         <section>
           <h3>Visão</h3>
-          <p>Esses animais possuem o mais complexo sistema de visão de cores do mundo animal, pois enxergam 12 cores primárias, correspondentes aos 12 pigmentos distintos presentes em sua retina. Nossos olhos possuem três tipos desses receptores - que correspondem à luz azul, verde e vermelha -, que nos permitem perceber o espectro de cores que vemos. Os cães contam com apenas dois tipos de cones (verde e azul), e é por isso que eles vêm tons de azul, verde e um pouco de amarelo. Muitos anfíbios, répteis, aves e insetos possuem quatro tipo de cones, o que significa que espécies dessas classes conseguem ver cores que o nosso cérebro é incapaz de processar. Algumas espécies específicas de borboletas e possivelmente pombos possuem cinco cones de percepção de cor, o que aumenta ainda mais a quantidade de pigmentos que eles são capazes de perceber. O sistema de visão dos estomatópodes possui doze cones sensíveis à luz e outros quatro que filtram a luz (16 cones no total), o que lhes permite ver cores polarizadas e imagens multiespectrais. Como cada cone pode ver cerca de 100 cores, os estomatópodes são capazes de ver 1024 cores, ou seja, 1 septilhão de cores. Em comparação, o olho humano vê 106 cores, ou seja, 1 milhão de cores apenas. A visão dos estomatópodes é sensível à luz ultravioleta, mas ainda é desconhecido se ela pode distinguir a luz infravermelha.</p>
+          <img src="../images/image1.jpeg" alt="Foto Stomatopoda">
+          <p>Esses animais possuem o mais complexo sistema de visão de cores do mundo animal, 
+            pois enxergam 12 cores primárias, correspondentes aos 12 pigmentos distintos presentes 
+            em sua retina. Nossos olhos possuem três tipos desses receptores - que correspondem à 
+            luz azul, verde e vermelha -, que nos permitem perceber o espectro de cores que vemos. 
+            Os cães contam com apenas dois tipos de cones (verde e azul), e é por isso que eles vêm 
+            tons de azul, verde e um pouco de amarelo. Muitos anfíbios, répteis, aves e insetos 
+            possuem quatro tipo de cones, o que significa que espécies dessas classes conseguem 
+            ver cores que o nosso cérebro é incapaz de processar. Algumas espécies específicas de 
+            borboletas e possivelmente pombos possuem cinco cones de percepção de cor, o que aumenta 
+            ainda mais a quantidade de pigmentos que eles são capazes de perceber. O sistema de visão 
+            dos estomatópodes possui doze cones sensíveis à luz e outros quatro que filtram a luz 
+            (16 cones no total), o que lhes permite ver cores polarizadas e imagens multiespectrais. 
+            Como cada cone pode ver cerca de 100 cores, os estomatópodes são capazes de ver 1024 cores,
+            ou seja, 1 septilhão de cores. Em comparação, o olho humano vê 106 cores, ou seja, 1 
+            milhão de cores apenas. A visão dos estomatópodes é sensível à luz ultravioleta, mas ainda 
+            é desconhecido se ela pode distinguir a luz infravermelha.
+          </p>
+        </section>
+        <section>
+          <h3>Referências Bibliográficas</h3>
+          <nav>
+            <a href="https://pt.wikipedia.org/wiki/Stomatopoda" target="_blank">wikipedia</a>
+            <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fespeciesmarinhas.blogspot.com%2F2018%2F03%2Fs-toma-topoda-lagosta-boxeadora.html&psig=AOvVaw3XR2R04lvmQjzVW-cUIOgM&ust=1666220760456000&source=images&cd=vfe&ved=0CA8Q3YkBahcKEwiYup-W8ur6AhUAAAAAHQAAAAAQBA" target="_blank">Imagens</a>
+            <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fnoticias.ambientebrasil.com.br%2Fclipping%2F2019%2F12%2F03%2F155825-estudo-pode-ter-descoberto-por-que-o-camarao-mantis-tem-a-visao-mais-absurda-do-reino-animal.html&psig=AOvVaw0tAkArBJN82_xNYgi_LBAj&ust=1666220527433000&source=images&cd=vfe&ved=0CA8Q3YkBahcKEwjYg5yn8er6AhUAAAAAHQAAAAAQRw" target="_blank">Imagem</a>
+            <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.biodiversity4all.org%2Ftaxa%2F49796-Stomatopoda&psig=AOvVaw0tAkArBJN82_xNYgi_LBAj&ust=1666220527433000&source=images&cd=vfe&ved=0CA8Q3YkBahcKEwjYg5yn8er6AhUAAAAAHQAAAAAQTQ" target="_blank"></a>
+          </nav>
         </section>
       </article>
     </main>
